--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,32 +7,166 @@
 	</head>
 
 	<body>
-		<div id="menu_panel">
-			<div id="menu" class="right">
-				<div id="new_releases" class="button">new releases</div>
-				<div id="follow" class="button">follow this manga</div>
-				<div id="update" class="button">update the list</div>
-				<div>
-					<div id="console_toggle" class="left button small_button">&lt</div>
-					<div id="options" class="left button large_button">options</div>
-					<div id="help" class="left button small_button">?</div>
-				</div>
-			</div>
-			<div id="console" class="left hidden">
-				<div id="console_display"></div>
-				<div id="console_recap" class="bottom">
-					<div id="console_updating" class="left medium_button button"><div class="left">updating (show)</div><div id="console_updating_number" class="right">(0)</div></div>
-					<div id="console_completed" class="left medium_button button"><div class="left">completed (show)</div><div id="console_completed_number" class="right green_text">(0)</div></div>
-					<div id="console_errors" class="left medium_button button"><div class="left">errors (copy)</div><div id="console_errors_number" class="right red_text">(0)</div></div>
-				</div>
-			</div>
+	<!------- MENU START ------->
+		<div id="menu">
+			<div class="inline extension_name">MangasSubscriber</div>
+			<div id="version" class="inline extension_version"></div>
+			<div id="follow" class="right tab" title="follow this manga"><img id="follow_icon" class="icons large_icons"></img></div>
+			<div id="options_toggle" class="right tab" title="show/hide options"><img id="options_icon" class="icons large_icons" src="../icons/options.svg"></img></div>
+			<div id="console_toggle" class="right tab" title="show/hide console"><img id="console_icon" class="icons large_icons" src="../icons/console.svg"></img></div>
+			<div id="help_toggle" class="right tab" title="show/hide help"><img id="help_icon" class="icons large_icons" src="../icons/help.svg"></img></div>
+			<div id="search_toggle" class="right tab" title="show/hide search"><img id="search_icon" class="icons large_icons" src="../icons/search.svg"></img></div>
 		</div>
-		<div id="mangas_list" class="hidden">
-			<div class="list_top"><div class="left button back_menu" id="back_menu"><- back</div><div class="left button all_releases" id="all_releases">show all mangas</div></div>
-			<div id="list"></div>
-		</div>
-		
-		<script src="popup.js"></script>
-	</body>
+	<!------- MENU END ------->
 
+	<!------- OPTIONS PANEL START ------->
+		<div id="options" class="panel">
+			<div id="unified_chapter_numbers" title="IMPORTANT : using unified chapters numbers means volume numbers wont be taken into account, and chapter numbers from every sites will be formatted the same. this insures there is no duplicate chapter when following a manga on several sites. 
+	the downside is that some websites that use volume numbers have uploaded old mangas while reinitializing chapters numbers at each new volume. for those particular cases, the new volumes wont be detected when using unified chapter numbers. 
+	NOT using unified chapter numbers on the other hand means that volume numbers are recorded, and that will create duplicate of chapters when following a manga on a site that use volume numbers and a site that doesn't at the same time. but in this case, no chapter will be missed."><div class="inline onehalf">use unified chapters numbers /!\ : </div><img class="inline icons" id="unified_chapter_numbers_tickbox" src="../icons/no.svg"></img></div>
+			<div id="check_all_sites"><div class="inline onehalf">check all sites when updating the list : </div><img class="inline icons" id="check_all_sites_tickbox" src="../icons/no.svg"></img></div>
+			<div id="navigation_bar"><div class="inline onehalf">navigation bar while browsing mangas : </div><img class="inline icons" id="navigation_bar_tickbox" src="../icons/yes.svg"></img></div>
+			<div id="auto_update" title="0 to disable it"><div class="inline onehalf">automatically update the list every : </div><input type="number" id="auto_update_interval" min="0" max="168" value="0" title="0-168 hours (= 7 days)"> hours</div>
+			<div id="search_limit" title="0 to show all results"><div class="inline onehalf">limit searches to the first : </div><input type="number" id="search_limit_number" min="0" value="0"> results</div>
+			<div id="export">export list to file</div>
+			<div id="import_as_file">import list from file</div>
+			<div id="export_online">export list to pastebin</div>
+			<div id="import_online">import list from pastebin</div>
+		</div>
+	<!------- OPTIONS PANEL END! ------->
+
+	<!------- CONSOLE PANEL START ------->
+		<div id="console" class="panel">
+			<div id="console_recap">
+				<div id="console_updating" class="left onethird button"><div class="left">updating (hide)</div><div id="console_updating_number" class="right">(0)</div></div>
+				<div id="console_completed" class="left onethird button"><div class="left">completed (hide)</div><div id="console_completed_number" class="right green_text">(0)</div></div>
+				<div id="console_errors" class="left onethird button"><div class="left">errors (copy)</div><div id="console_errors_number" class="right red_text">(0)</div></div>
+			</div>
+			<div id="console_display"></div>
+		</div>
+	<!------- CONSOLE PANEL END! ------->
+
+	<!------- HELP PANEL START ------->
+		<div id="help" class="panel">
+			<div class="separator">
+				<h2><b>The Browser Action</b> is your entry point :</h2>
+				<div class="section">
+					<h3>The Icon</h3>
+					<img class="inline" src="../help/images/help_icon.png"><ul><li>On the icon is displayed the number of mangas that have at least one chapter you have yet to read (no matter how many unread chapters a manga has, it will be counted as one).</li> 
+						<li>When you click it, it will bring up the popup menu.</li>
+						<li class="tooltip" title="Instead, to open the popup, use the page menu (generally triple dot in the top right corner), scroll it down to your addons list, and tap [MangasSub].">It is unavailable on firefox for android !</li></ul>
+				</div>
+			</div>
+			<div class="separator">
+				<h2><b>The PopUp</b> consists of different parts :</h2>
+				<div class="zoom"><img class="small_image" src="../help/images/help_list.png"></div>
+				<div class="section">
+					<h3>The first part is the Menu</h3>
+					<ul><li><img class="inline" src="../help/images/help_follow.png"> add the manga to your list. It can also be : <img class="inline" src="../help/images/help_followed.png"> (already in your list), or <img class="inline" src="../help/images/help_unfollowable.png"> (not a manga on a supported website)</li>
+						<li><img class="inline" src="../help/images/help_options_icon.png"> open/close the options panel.</li>
+						<li><img class="inline" src="../help/images/help_console_icon.png"> open/close the console panel.</li>
+						<li><img class="inline" src="../help/images/help_help_icon.png"> open/close the help panel (this one).</li>
+						<li><img class="inline" src="../help/images/help_name&version.png"> version of the extension. close any opened panel.</li>
+					</ul>
+				</div>
+				<div class="section">
+					<h3>The second part filters the list and apply actions to all visible mangas</h3>
+					<ul>
+						<li><img class="inline" src="../help/images/help_filter.png"> hide all mangas in the list whose title doesn't contain what is typed inside.</li>
+						<li><img class="inline icons" src="../icons/unread.svg"> toggle the display of fully read mangas.</li>
+						<li><img class="inline icons" src="../icons/already_read.svg"> toggle the display of mangas with unread chapters.</li>
+						<li><img class="inline icons" src="../icons/refresh.svg"> refresh the list.</li>
+						<li>The subsequent buttons apply to all visible ( = not filtered) mangas : <img class="inline icons" src="../icons/read.svg"> open selected chapter in a new tab, <span class="tooltip" title="Please be patient though, as depending on the number of mangas you're trying to update at once, it can take quite a while and make your browser quite unresponsive. Even if the popup is closed, the upate will continue in the background"><img class="inline icons" src="../icons/update.svg"> update</span>, <img class="inline icons" src="../icons/read_all.svg">mark all chapters as 'read', <span class="tooltip" title="If turned off, the mangas won't be updated with the rest of the list when you do a grouped update."><img class="inline icons" src="../icons/update_true.svg">/<img class="inline icons" src="../icons/update_false.svg"> toggle update on/off</span>, <img class="inline icons" src="../icons/trash.svg"> remove from the list</li>
+					</ul>
+				</div>
+				<div class="section">
+					<h3>The third (and last) part is the list</h3>
+					<ul>
+						<li>Each line represents a manga (name, number of unread chapters, and <span class="tooltip" title="ordered with unread stuff (ascending order on red background) at the top, followed by stuff already read (descending order on green background)"><b>the list of chapters</b></span>, followed by the <span title="open the selected chapter in a new tab"><img class="inline icons" src="../icons/read.svg"> open selected chapter at the end).</li>
+						<li>Hovering over a manga will extend it to show additional options applying to that manga only : <img class="inline icons" src="../icons/trash.svg"> remove from the list, <span  class="tooltip" title="It's the website on which the manga will be updated when 'check all sites' is disabled. By default, it's the one you registered the manga on."><img class="inline" src="../help/images/help_websiteselect.png"> select the primary website</span>, <span class="tooltip" title="Please be patient though, as depending on the number of mangas you're trying to update at once, it can take quite a while and make your browser quite unresponsive. Even if the popup is closed, the upate will continue in the background. It will ignore the 'don't update with the rest of the list' option."><img class="inline icons" src="../icons/update.svg"> update</span>, <img class="inline icons" src="../icons/read_all.svg">mark all chapters as 'read', <span class="tooltip" title="If turned off, the mangas won't be updated with the rest of the list when you do a grouped update."><img class="inline icons" src="../icons/update_true.svg">/<img class="inline icons" src="../icons/update_false.svg"> toggle update on/off</span></li>
+					</ul>
+				</div>
+			</div>
+			<div class="separator">
+				<h2><b>The Options Panel</b> gives you the following possibilities :</h2>
+				<div class="section">
+					<h3>The Options</h3>
+					<div class="zoom"><img class="small_image" src="../help/images/help_options.png"></img></div>
+					<ul>
+						<li><span class="tooltip" title="By default it is off. Be careful here, as using it for general use will significantly increase update times. Recommended use is to turn it on, manually update the mangas that have a leap in chapters, and then turn it off.""><b>check all sites :</b></span> lets you choose whether to check only a manga's preferred website when looking for new chapters, or all available websites.</li> 
+						<li><span class="tooltip" title="It only directs to chapters the extension is aware of (ie : chapters that have been found during an update or while reading). Some buttons may not appear when not applicable (for instance, previous when the previous chapter is also the first)."><b>navigation bar :</b></span> will let you navigate between chapters (first, previous, next and last) when reading a subscribed manga.</li>
+						<li><span class="tooltip" title="0~24 hours, 0 to turn it off."><b>automatically update :</b></span> will update the list every X hours.</li>
+						<li><b>export list to file :</b> will export your list to a local json file.</li>
+						<li><span class="tooltip" title="The local data will be overwritten."><b>import mangas list from text :</b></span> will import data copy/pasted in the field.</li>
+						<li><span class="tooltip" title="The local data will be overwritten."><b>import mangas list from file :</b></span> will open a webpage to import data saved in a file.</li> 
+						<li><span class="tooltip" title="The data previously exported to pastebin will be overwritten."><b>export list to pastebin :</b></span> will anonymously export your list to pastebin.</li>
+						<li><span class="tooltip" title="The local data will be overwritten."><b>import list from pastebin :</b></span> will import data previously exported to pastebin.</li>
+					</ul>
+				</div>
+			</div>
+			<div class="separator">
+				<h2><b>The Console Panel</b> show you what's happening while you're updating :</h2>
+				<div class="section">
+					<h3>The Console</h3>
+					<div class="zoom"><img class="small_image" src="../help/images/help_console.png"></div>
+					<ul>
+						<li><b>updating :</b> shows/hides the mangas you have started updating, and on which website.</li>
+						<li><b>completed :</b> shows/hides the mangas that have successfully been updated.</li>
+						<li><b>errors :</b> copies (ctrl+c) the errors for easy reporting.</li>
+					</ul>
+				</div>	
+			</div>
+		</div>
+	<!------- HELP PANEL END! ------->
+
+	<!------- SEARCH PANEL START ------->
+		<div id="search" class="panel">
+			<div class="inline field_container">
+				<input type="search" placeholder="search for..." id="search_field" title="type to search for something on all websites. [enter] to validate."><!--
+				--><div id="search_field_clear" class="inline input_button" title="clear the search bar"><img class="small_icons" src="../icons/no.svg"></img></div>
+			</div>
+		</div>
+	<!------- SEARCH PANEL END! ------->
+
+	<!------- LIST TOP START ------->
+		<div class="list_top">
+			<div class="inline field_container">
+				<input type="search" placeholder="filter list..." id="filter_list" title="type to filter the list" autofocus><!--
+				--><div id="filter_clear" class="inline input_button" title="clear the text filter"><img class="small_icons" src="../icons/no.svg"></img></div>
+			</div>
+			<img id="unread_filter" class="inline icons selected" src="../icons/unread.svg" title="filter unread mangas"></img>
+			<img id="already_read_filter" class="inline icons selected" src="../icons/already_read.svg" title="filter read mangas"></img>
+			<img id="refresh_list" class="inline icons" src="../icons/refresh.svg" title="refresh the list"></img>
+			<select id="tags_filter" title="select a tag to filter the list"><option selected>use all tags</option></select>
+			<div class="right"><div class="inline"> Apply to all visible mangas : </div>
+			<img id="list_read_icon" class="inline icons" src="../icons/read.svg" title="read in new tabs"></img>
+			<img id="list_update_icon" class="inline icons" src="../icons/update.svg" title="update now.&#10;does not ignore the 'no update' tag!"></img>
+			<img id="list_read_all_icon" class="inline icons" src="../icons/read_all.svg" title="mark all chapters as read"></img>		
+			<img id="list_update_toggle_icon" class="inline icons" src="../icons/update_true.svg" title="toggle updates on/off"></img>
+			<img id="list_delete_icon" class="inline icons" src="../icons/trash.svg" title="delete from your list"></img></div>
+		</div>
+	<!------- LIST TOP END ------->
+	
+	<!------- LIST BODY START ------->
+		<div id="modal_background" class="modal_background">
+			<div id="modal_window">
+				<div id="modal_title"></div>
+				<div id="modal_content"></div>
+				<div id="modal_agree" class="inline">proceed</div>
+				<div id="modal_cancel" class="inline">cancel</div>
+				<div id="modal_dismiss" class="inline">dismiss</div>
+			</div>
+		</div>
+		<div id="list_container"><div id="list"></div></div>
+	<!------- LIST BODY END ------->
+	
+	<!------- SCRIPTS IMPORT START ------->
+		<script src="popup.js"></script>
+		<script src="list.js"></script>
+		<script src="options.js"></script>
+		<script src="console.js"></script>
+		<script src="modal.js"></script>
+		<script src="search.js"></script>
+	<!------- SCRIPTS IMPORT END ------->
+	</body>
 </html>
