--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -1,8 +1,7 @@
 <!-- PATCHNOTES ENTRY TEMPLATE
+
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">
-		version 
-	</h2>
+	<h2 class="name_text">version </h2>
 	<div>
 		<ul>
 			<li></li>
@@ -13,9 +12,15 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">
-		version 2.0.3_hotfix1
-	</h2>
+	<h2 class="name_text">version 2.0.3_hotfix2</h2>
+	<div>
+		<ul>
+			<li>fixed the "patchnotes reappearing" problem</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.0.3_hotfix1</h2>
 	<div class="patchnotes_list">
 		<ul>
 			<li>fixed import list not working with backups made in version 2.0.3</li>
@@ -25,9 +30,7 @@
 	</div>
 </div>
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">
-		version 2.0.3
-	</h2>
+	<h2 class="name_text">version 2.0.3</h2>
 	<div class="patchnotes_list">
 		<ul>
 			<li>fixed support for firefox android and the websites' mobile versions</li>
@@ -38,9 +41,7 @@
 	</div>
 </div>
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">
-		version 2.0.2
-	</h2>
+	<h2 class="name_text">version 2.0.2</h2>
 	<div class="patchnotes_list">
 		<ul>
 			<li>added support for webtoons.com</li>
@@ -50,9 +51,7 @@
 	</div>
 </div>
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">
-		version 2.0.1
-	</h2>
+	<h2 class="name_text">version 2.0.1</h2>
 	<div class="patchnotes_list">
 		<ul>
 			<li>fix for mangahere new UI.</li>
@@ -64,9 +63,7 @@
 	</div>
 </div>
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">
-		version 2.0.0
-	</h2>
+	<h2 class="name_text">version 2.0.0</h2>
 	<div class="patchnotes_list">
 		<ul>
 			<li>first public release !</li>
