--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,20 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.0.4</h2>
+	<div>
+		<ul>
+			<li>added support for mangarock.com</li>
+			<li>due to mangarock's technical choices, searching for mangas will temporarily open mangarock's search page in a new tab</li>
+			<li>fixed the auto-update not restarting when closing and reopening the browser</li>
+			<li>the auto-update will now properly restart, setting the timer duration to what it would have been if the browser hadn't been closed</li>
+			<li>if the browser has been closed longer than the remaining timer, the auto-update will be performed as soon as the browser is reopened</li>
+			<li>importing a list will reset the auto-update timer</li>
+			<li>tweaked navigation bar and rest of content positioning when reading a manga</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.0.3_hotfix2</h2>
 	<div>
 		<ul>
