--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,21 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.0.5</h2>
+	<div>
+		<ul>
+			<li>added cookies to bypass age restriction on fanfox and mangahere (which prevented proper update of restricted mangas)</li>
+			<li>virtual keyboard won't automatically appear over the list on android anymore</li>
+			<li>fixed bug with mangarock opening more pages than needed when looking for mangas</li>
+			<li>fixed bug when following a manga from its root page on readmangatoday</li>
+			<li>improved description of permissions in help panel</li>
+			<li>fixed search functionnality bug on mangakakalot and manganelo due to their new layout</li>
+			<li>added support for readmangatoday when viewing all pages of a chapter at once</li>
+			<li>replaced "..." from navigation bar with current chapter number</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.0.4</h2>
 	<div>
 		<ul>
