--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,18 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.0.7</h2>
+	<div>
+		<ul>
+			<li>fixed support for challenge/discovery section of webtoons.com</li>
+			<li>fixed outdated mangahere urls in search results</li>
+			<li>filter your mangas list based on the websites your mangas are followed on</li>
+			<li>IMPORTANT : removed support for mangarock !</li>
+			<li>Due to technical reasons, this website is not supported anymore. Please update your relevant mangas to follow them on other websites.</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.0.6</h2>
 	<div>
 		<ul>
