--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,15 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.0.8</h2>
+	<div>
+		<ul>
+			<li>the mangas list is automatically saved when updating the extension</li>
+			<li>tweaked filename when saving the list to include the date</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.0.7</h2>
 	<div>
 		<ul>
