--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,18 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.1.0</h2>
+	<div>
+		<ul>
+			<li>IMPORTANT : removed support for readmangatoday !</li>
+			<li>Due to technical reasons, this website is not supported anymore. Please update your relevant mangas to follow them on other websites.</li>
+			<li>new performance mode option (enabled by default - it deactivates the automatic refresh of the list when opening a new chapter, and most of the update messages). ALL PREFERENCES HAVE BEEN RESET !</li>
+			<li>tweaked a few other things to improve general performances</li>
+			<li>added to each manga the date it has last been updated on</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.0.9</h2>
 	<div>
 		<ul>
