--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,15 +23,14 @@
 		<div id="options" class="panel">
 			<div id="unified_chapter_numbers" title="IMPORTANT : using unified chapters numbers means volume numbers wont be taken into account, and chapter numbers from every sites will be formatted the same. This insures there is no duplicate chapter when following a manga on several sites. 
 	The downside is that some websites that use volume numbers have uploaded old mangas while reinitializing chapters numbers at each new volume. For those particular cases, the new volumes wont be detected when using unified chapter numbers. 
-	NOT using unified chapter numbers on the other hand means that volume numbers are recorded, and that will create duplicate of chapters when following a manga on a site that use volume numbers and a site that doesn't at the same time. But in this case, no chapter will be missed."><div class="inline onehalf">use unified chapter numbers /!\ : </div><img class="inline icons" id="unified_chapter_numbers_tickbox" src="../icons/no.svg"></img></div>
-			<div id="check_all_sites"><div class="inline onehalf">check all sites when updating the list : </div><img class="inline icons" id="check_all_sites_tickbox" src="../icons/no.svg"></img></div>
-			<div id="navigation_bar"><div class="inline onehalf">navigation bar while browsing mangas : </div><img class="inline icons" id="navigation_bar_tickbox" src="../icons/yes.svg"></img></div>
-			<div id="auto_update" title="0 to disable it"><div class="inline onehalf">automatically update the list every : </div><input type="number" id="auto_update_interval" min="0" max="168" value="0" title="0-168 hours (= 7 days)"> hours</div>
-			<div id="search_limit" title="0 to show all results"><div class="inline onehalf">limit searches to the first : </div><input type="number" id="search_limit_number" min="0" value="0"> results</div>
-			<div id="export">export list to file</div>
-			<div id="import_as_file">import list from file</div>
-			<div id="export_online">export list to pastebin</div>
-			<div id="import_online">import list from pastebin</div>
+	NOT using unified chapter numbers on the other hand means that volume numbers are recorded, and that will create duplicate of chapters when following a manga on a site that use volume numbers and a site that doesn't at the same time. But in this case, no chapter will be missed." class="line"><div class="inline onehalf">use unified chapter numbers /!\ : </div><img class="inline icons" id="unified_chapter_numbers_tickbox" src="../icons/no.svg"></img></div>
+			<div id="performance_mode" title="Performance mode deactivates the automated refreshing of the list when opening a chapter and most updating messages in the console (only error messages wil be left)." class="line"><div class="inline onehalf">enable performance mode : </div><img class="inline icons" id="performance_mode_tickbox" src="../icons/no.svg"></img></div>
+			<div id="check_all_sites" class="line"><div class="inline onehalf">check all sites when updating the list : </div><img class="inline icons" id="check_all_sites_tickbox" src="../icons/no.svg"></img></div>
+			<div id="navigation_bar" class="line"><div class="inline onehalf">navigation bar while browsing mangas : </div><img class="inline icons" id="navigation_bar_tickbox" src="../icons/yes.svg"></img></div>
+			<div id="auto_update" title="0 to disable it" class="line"><div class="inline onehalf">automatically update the list every : </div><input type="number" id="auto_update_interval" min="0" max="168" value="0" title="0-168 hours (= 7 days)"> hours</div>
+			<div id="search_limit" title="0 to show all results" class="line"><div class="inline onehalf">limit searches to the first : </div><input type="number" id="search_limit_number" min="0" value="0"> results</div>
+			<div><div id="export" class="inline onehalf line">export list to file</div><div id="import_as_file" class="inline onehalf line">import list from file</div></div>
+			<div><div id="export_online" class="inline onehalf line">export list to pastebin</div><div id="import_online" class="inline onehalf line">import list from pastebin</div></div>
 		</div>
 	<!------- OPTIONS PANEL END! ------->
 
@@ -57,7 +56,7 @@
 						<li>track you reading progress</li>
 						<li>find new chapters for your followed mangas</li>
 					</ul>
-					It works with <a href="https://fanfox.net">Fanfox/Mangafox</a>, <a href="https//www.mangahere.cc">Mangahere</a>, <a href="https//www.webtoons.com">Webtoons</a>, <a href="https//mangatown.com">MangaTown</a>, <a href="https//readmng.com">ReadMangasToday</a>, <a href="https//mangakakalot.com">MangaKakalot</a>, <a href="https//manganelo.com">Manganelo</a>, and <a href="https//mangarock.com">MangaRock</a>.
+					It works with <a href="https://fanfox.net">Fanfox/Mangafox</a>, <a href="https//www.mangahere.cc">Mangahere</a>, <a href="https//www.webtoons.com">Webtoons</a>, <a href="https//mangatown.com">MangaTown</a>, <a href="https//readmng.com">ReadMangasToday</a>, <a href="https//mangakakalot.com">MangaKakalot</a>, and <a href="https//manganelo.com">Manganelo</a>.
 					<br>The permissions you agreed to during installation are used to :
 					<ul>
 						<li>follow a manga (tabs)</li>
@@ -111,7 +110,7 @@
 				<div class="section">
 					<h3>The third (and last) part is the list</h3>
 					<ul>
-						<li>Each line represents a manga (name, number of unread chapters, and <span class="tooltip" title="ordered with unread stuff (ascending order on red background) at the top, followed by stuff already read (descending order on green background)"><b>the list of chapters</b></span>, followed by the <span title="open the selected chapter in a new tab"><img class="inline icons" src="../icons/read.svg"> open selected chapter at the end).</li>
+						<li>Each line represents a manga (name, date of last update, number of unread chapters, and <span class="tooltip" title="ordered with unread stuff (ascending order on red background) at the top, followed by stuff already read (descending order on green background)"><b>the list of chapters</b></span>, followed by the <span title="open the selected chapter in a new tab"><img class="inline icons" src="../icons/read.svg"> open selected chapter at the end).</li>
 						<li>Hovering over a manga will extend it to show additional options applying to that manga only : <img class="inline icons" src="../icons/trash.svg"> remove from the list, <span  class="tooltip" title="The tags registered for that mangas. you can add, remove or create new tags as you want."><img class="inline" src="../help/images/help_tag_list.png"> select the tags</span>, <span  class="tooltip" title="Choose all the websites on which to update that manga. Also pick a primary website, on which to read by default (also the one used to update when 'check all sites' is disabled). By default, it's the one you registered the manga on."><img class="inline" src="../help/images/help_websiteselect.png"> select the websites</span>, <span class="tooltip" title="Please be patient though, as depending on the number of mangas you're trying to update at once, it can take quite a while and make your browser quite unresponsive. Even if the popup is closed, the upate will continue in the background. It will ignore the 'don't update with the rest of the list' option."><img class="inline icons" src="../icons/update.svg"> update</span>, <img class="inline icons" src="../icons/read_all.svg">mark all chapters as 'read', <span class="tooltip" title="If turned off, the mangas won't be updated with the rest of the list when you do a grouped update."><img class="inline icons" src="../icons/update_true.svg">/<img class="inline icons" src="../icons/update_false.svg"> toggle update on/off</span></li>
 					</ul>
 				</div>
@@ -125,6 +124,8 @@
 						<li><span class="tooltip" title="IMPORTANT : using unified chapters numbers means volume numbers wont be taken into account, and chapter numbers from every sites will be formatted the same. This insures there is no duplicate chapter when following a manga on several sites. 
 	The downside is that some websites that use volume numbers have uploaded old mangas while reinitializing chapters numbers at each new volume. For those particular cases, the new volumes wont be detected when using unified chapter numbers. 
 	NOT using unified chapter numbers on the other hand means that volume numbers are recorded, and that will create duplicate of chapters when following a manga on a site that use volume numbers and a site that doesn't at the same time. But in this case, no chapter will be missed."><b>unified chapter numbers :</b></span> lets you choose whether or not chapters numbers are all formated the same (and volume numbers discarded) regardless of the registered websites numerotation system.</li> 
+						<li><span class="tooltip" title="By default it is on. It deactivates the automated refreshing of the list when opening a chapter and most updating messages in the console (only error messages wil be left), which can greatly improve updating speed depending on the number of mangas you follow.
+	The downside is that the list isn't refreshed in real time though, so you have to wait for the end of the update to see the results, and without the updating console messages you can't see the progress."><b>performance mode :</b></span> lets you choose whether or not to trim down the updating process to its minimum.</li> 
 						<li><span class="tooltip" title="By default it is off. Be careful here, as using it for general use will significantly increase update times. Recommended use is to turn it on, manually update the mangas that have a leap in chapters, and then turn it off."><b>check all sites :</b></span> lets you choose whether to check only a manga's primary website when looking for new chapters, or all registered websites.</li> 
 						<li><span class="tooltip" title="It only directs to chapters the extension is aware of (ie : chapters that have been found during an update or while reading). Some buttons may not appear when not applicable (for instance, previous when the previous chapter is also the first)."><b>navigation bar :</b></span> will let you navigate between chapters (first, previous, next and last) when reading a subscribed manga. will also unlock a button while reading to mark a chapter as "not read" (if the website can't load images or something).</li>
 						<li><span class="tooltip" title="0~168 hours (= 7 days), 0 to turn it off."><b>automatically update :</b></span> will update the list every X hours.</li>
@@ -142,8 +143,8 @@
 					<h3>The Console</h3>
 					<div class="zoom"><img class="small_image" src="../help/images/help_console.png"></div>
 					<ul>
-						<li><b>updating :</b> shows/hides the mangas you have started updating, and on which website.</li>
-						<li><b>completed :</b> shows/hides the mangas that have successfully been updated.</li>
+						<li><b>updating :</b> shows/hides the mangas you have started updating, and on which website. will not show anything when performance mode is enabled.</li>
+						<li><b>completed :</b> shows/hides the mangas that have successfully been updated. will not show anything when performance mode is enabled.</li>
 						<li><b>errors :</b> copies (ctrl+c) the errors for easy reporting.</li>
 					</ul>
 				</div>	
