--- a/popup/popup.html
+++ b/popup/popup.html
@@ -56,7 +56,7 @@
 						<li>track you reading progress</li>
 						<li>find new chapters for your followed mangas</li>
 					</ul>
-					It works with <a href="https://fanfox.net">Fanfox/Mangafox</a>, <a href="https//www.mangahere.cc">Mangahere</a>, <a href="https//www.webtoons.com">Webtoons</a>, <a href="https//mangatown.com">MangaTown</a>, <a href="https//readmng.com">ReadMangasToday</a>, <a href="https//mangakakalot.com">MangaKakalot</a>, and <a href="https//manganelo.com">Manganelo</a>.
+					It works with <a href="https://fanfox.net">Fanfox/Mangafox</a>, <a href="https//www.mangahere.cc">Mangahere</a>, <a href="https//www.webtoons.com">Webtoons</a>, <a href="https//mangatown.com">MangaTown</a>,<a href="https//mangakakalot.com">MangaKakalot</a>, <a href="https//manganelo.com">Manganelo</a> and <a href="https//isekaiscan.com">Isekaiscan</a>.
 					<br>The permissions you agreed to during installation are used to :
 					<ul>
 						<li>follow a manga (tabs)</li>
