fixes for manganelo

--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,22 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.1.8</h2>
+	<div>
+		<ul>
+			<li>fixed incorrect dates for manganelo</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.1.7</h2>
+	<div>
+		<ul>
+			<li>fixed error when looking for chapters on manganelo</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.1.6</h2>
 	<div>
 		<ul>
