--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,16 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.1.11</h2>
+	<div>
+		<ul>
+			<li>fixed unwanted behavior when following a manga</li>
+			<li>fixed incorrect display of patchnotes</li>
+			<li>reinitialized some incorrectly formatted last update date</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.1.10</h2>
 	<div>
 		<ul>
