--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,17 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.2.1</h2>
+	<div>
+		<ul>
+			<li>added support for mangadex.org</li>
+			<li>fixed mangas update on isekaiscan</li>
+			<li>fixed search function on isekaiscan</li>
+			<li>fixed search function on manganelo</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.1.11</h2>
 	<div>
 		<ul>
