--- a/popup/popup.html
+++ b/popup/popup.html
@@ -30,7 +30,7 @@
 			<div id="auto_update" title="0 to disable it" class="line"><div class="inline onehalf">automatically update the list every : </div><input type="number" id="auto_update_interval" min="0" max="168" value="0" title="0-168 hours (= 7 days)"> hours</div>
 			<div id="search_limit" title="0 to show all results" class="line"><div class="inline onehalf">limit searches to the first : </div><input type="number" id="search_limit_number" min="0" value="0"> results</div>
 			<div><div id="export" class="inline onehalf line">export list to file</div><div id="import_as_file" class="inline onehalf line">import list from file</div></div>
-			<div><div id="export_online" class="inline onehalf line">export list to pastebin</div><div id="import_online" class="inline onehalf line">import list from pastebin</div></div>
+			<div><div id="export_online" class="inline onehalf line">export list to paste.ee</div><div id="import_online" class="inline onehalf line">import list from paste.ee</div></div>
 		</div>
 	<!------- OPTIONS PANEL END! ------->
 
@@ -56,7 +56,7 @@
 						<li>track you reading progress</li>
 						<li>find new chapters for your followed mangas</li>
 					</ul>
-					It works with <a href="https://fanfox.net">Fanfox/Mangafox</a>, <a href="https//www.mangahere.cc">Mangahere</a>, <a href="https//www.webtoons.com">Webtoons</a>, <a href="https//mangatown.com">MangaTown</a>,<a href="https//mangakakalot.com">MangaKakalot</a>, <a href="https//manganelo.com">Manganelo</a> and <a href="https//isekaiscan.com">Isekaiscan</a>.
+					It works with <a href="https://fanfox.net">Fanfox/Mangafox</a>, <a href="https//www.mangahere.cc">Mangahere</a>, <a href="https//www.webtoons.com">Webtoons</a>, <a href="https//mangatown.com">MangaTown</a>, <a href="https//manganelo.com">Manganelo</a>, <a href="https//isekaiscan.com">Isekaiscan</a> and <a href="https://mangadex.org">MangaDex</a>.
 					<br>The permissions you agreed to during installation are used to :
 					<ul>
 						<li>follow a manga (tabs)</li>
@@ -64,6 +64,7 @@
 						<li>bypass the age restriction on followed mangas (cookies)</li>
 						<li>store data about followed mangas and reading progression (storage)</li>
 						<li>save your list as a file (downloads)</li>
+						<li>save your list online (access to paste.ee)</li>
 						<li>copy error messages from the update console (clipboard)</li>
 					</ul>
 					Please report bugs or send suggestions to <a href="mailto:mangassubscriber@gmail.com">mangassubscriber@gmail.com</a>, thank you !
@@ -132,8 +133,8 @@
 						<li><span class="tooltip" title="0 to turn off the limit. It affects both the search panel and results show when adding a website which uses a different name to a manga (for instance 'good luck demon king' and 'good luck maou-sama')."><b>limit searches :</b></span> will only show the first X results when searching on mangas websites.</li>
 						<li><b>export list to file :</b> will export your list to a local json file.</li>
 						<li><span class="tooltip" title="The local data will be overwritten."><b>import mangas list from file :</b></span> will open a webpage to import data saved in a file.</li> 
-						<li><span class="tooltip" title="The data previously exported to pastebin will be overwritten."><b>export list to pastebin :</b></span> will anonymously export your list to pastebin.</li>
-						<li><span class="tooltip" title="The local data will be overwritten."><b>import list from pastebin :</b></span> will import data previously exported to pastebin.</li>
+						<li><span class="tooltip" title="The data previously exported to paste.ee will be overwritten."><b>export list to paste.ee :</b></span> will anonymously export your list to paste.ee.</li>
+						<li><span class="tooltip" title="The local data will be overwritten."><b>import list from paste.ee :</b></span> will import data previously exported to paste.ee.</li>
 					</ul>
 				</div>
 			</div>
