--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,10 +12,21 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.0</h2>
+	<div>
+		<ul>
+			<li>added an option to navigate chapters using the keyboard</li>
+			<li>fixed a bug resulting in occasional incorrect chapter number for mangadex</li>
+			<li>fixed placeholder chapter detection for mangadex</li>
+			<li>fixed a bug occasionally preventing database upgrade when updating to new version</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.2.7</h2>
 	<div>
 		<ul>
-			<li>fix for some improperly formatted mangadex urls and dates in existing lists</li>
+			<li>fixed some improperly formatted mangadex urls and dates in existing lists</li>
 		</ul>
 	</div>
 </div>
