--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,22 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.2</h2>
+	<div>
+		<ul>
+			<li>corrected typo</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.1</h2>
+	<div>
+		<ul>
+			<li>fixed isekaiscan update</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.3.0</h2>
 	<div>
 		<ul>
