--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,7 +12,23 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
-	<h2 class="name_text">version </h2>
+	<h2 class="name_text">version 2.3.6</h2>
+	<div>
+		<ul>
+			<li>fix for mangadex API changes</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.5</h2>
+	<div>
+		<ul>
+			<li>fixed erroneous url when when searching for a manga on mangadex</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.4</h2>
 	<div>
 		<ul>
 			<li>fixed chapter numbers sometimes appearing in duplicate with gibberish on isekaiscan</li>
