--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,14 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.7</h2>
+	<div>
+		<ul>
+			<li>fixed occasional crash when following or reading some mangas on mangadex (due to several groups translating the manga, which resulted in a group's id replacing the manga name)</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.3.6</h2>
 	<div>
 		<ul>
