--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,14 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.3.9</h2>
+	<div>
+		<ul>
+			<li>added support for chapmanganato</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.3.8</h2>
 	<div>
 		<ul>
