--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,10 +12,18 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.4.0</h2>
+	<div>
+		<ul>
+			<li>added support for mangago.me</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.3.9</h2>
 	<div>
 		<ul>
-			<li>added support for chapmanganato</li>
+			<li>added support for chapmanganato.com</li>
 		</ul>
 	</div>
 </div>
