--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -12,6 +12,19 @@
 </div>
 -->
 <div class="modal_list_line patchnotes_modal_list_line">
+	<h2 class="name_text">version 2.4.2</h2>
+	<div>
+		<ul>
+			<li>switched mangas from chapmanganato.com to champanganato.to, please check they all work correctly. if necessary, delete and re-follow them</li>
+			<li>switched mangas from readmanganato.com to manganato.com (or champanganato.to when not available on manganato.com), please check they all work correctly. if necessary, delete and re-follow them</li>
+			<li>switched mangas from isekaiscan.com to www.isekaiscan.top, please check they all work correctly. if necessary, delete and re-follow them</li>
+			<li>added support for manhuaplus.org</li>
+			<li>fixed mangago sometimes returning incorrect urls</li>
+			<li>fixed the follow button bugging on several websites hompage</li>
+		</ul>
+	</div>
+</div>
+<div class="modal_list_line patchnotes_modal_list_line">
 	<h2 class="name_text">version 2.4.1</h2>
 	<div>
 		<ul>
