--- a/help/patchnotes.html
+++ b/help/patchnotes.html
@@ -15,7 +15,8 @@
 	<h2 class="name_text">version 2.4.3</h2>
 	<div>
 		<ul>
-			<li>permission correction for chapmanganato.to</li>
+			<li>switched mangas from manganato.com to natomanga.com (or mangakakalot.gg when not available on natomanga.com), please check they all work correctly. if necessary, delete and re-follow them</li>
+			<li>switched mangas from chapmanganato.to to mangakakalot.gg (or natomanga.com when not available on mangakakalot.gg), please check they all work correctly. if necessary, delete and re-follow them</li>
 		</ul>
 	</div>
 </div>
